sumo/tests/netconvert/errors/XML/broken_edge/edge#function__empty1/errors.netconvert
Error: Empty edge function in edge '1'.
Quitting (on error).
